syntax = "proto3";

package contactpb;

option go_package = "/grpc/contactpb";

service ContactService {
    rpc CreateContact(CreateContactRequest) returns (CreateContactResponse);
    rpc GetContact(GetContactRequest) returns (GetContactResponse);
    rpc UpdateContact(UpdateContactRequest) returns (UpdateContactResponse);
    rpc DeleteContact(DeleteContactRequest) returns (DeleteContactResponse);
    rpc ListContacts(ListContactsRequest) returns (ListContactsResponse);
}

message Contact {
    uint32 id = 1;
    string contact_type = 2;         // "individual" or "company"
    string first_name = 3;
    string last_name = 4;
    string email = 5;
    string phone = 6;
    string address = 7;
    string city = 8;
    string state = 9;
    string country = 10;
    string zip_code = 11;
    string company_name = 12;        // Used for company contacts or unregistered companies
    string position = 13;
    string social_media_profiles = 14;
    string notes = 15;
    uint32 taxation_detail_id = 16;  // Optional taxation detail association (0 if not provided)
    string created_at = 17;
    string updated_at = 18;
}

message CreateContactRequest {
    Contact contact = 1;
}

message CreateContactResponse {
    Contact contact = 1;
}

message GetContactRequest {
    uint32 id = 1;
}

message GetContactResponse {
    Contact contact = 1;
}

message UpdateContactRequest {
    Contact contact = 1;
}

message UpdateContactResponse {
    Contact contact = 1;
}

message DeleteContactRequest {
    uint32 id = 1;
}

message DeleteContactResponse {
    bool success = 1;
}

message ListContactsRequest {
    uint32 page_number = 1;
    uint32 page_size = 2;
    string sort_by = 3;
    bool ascending = 4;
}

message ListContactsResponse {
    repeated Contact contacts = 1;
}
